--- a/Vocabulary/日常使用.md
+++ b/Vocabulary/日常使用.md
@@ -92,3 +92,82 @@
 - 剑桥英语常用短语手册  
 
 通过场景化学习，这些词汇能快速融入实际交流！
+
+---
+---
+
+以下是**牛津3000核心词汇表**（Oxford 3000™）的精选分类与学习指南，涵盖英语中最重要、最高频的单词，适合系统化掌握语言基础：
+
+---
+
+### **一、牛津3000词表简介**
+1. **权威性**：由牛津大学出版社语言学家基于语料库统计选出，覆盖英语文本85%的内容。  
+2. **分级标记**：★标记最核心的**牛津500**词汇（入门必学），其余按CEFR等级（A1-C2）分类。  
+3. **实用性**：每个词标注高频词性、常用搭配及例句，避免无效记忆。
+
+---
+
+### **二、核心分类与示例**
+#### **1. 基础动词（Action Verbs）**
+| **英文**   | **中文** | **例句**  
+|------------|----------|----------------|
+| achieve    | 实现     | She **achieved** her dream.  
+| discover   | 发现     | They **discovered** a new species.  
+| influence  | 影响     | Social media **influences** opinions.  
+
+#### **2. 高频名词（Key Nouns）**
+| **英文**   | **中文** | **搭配**  
+|------------|----------|----------------|
+| evidence   | 证据     | scientific **evidence**  
+| trend      | 趋势     | current **trend**  
+| benefit    | 好处     | health **benefits**  
+
+#### **3. 形容词（Essential Adjectives）**
+| **英文**   | **中文** | **反义词**  
+|------------|----------|----------------|
+| accurate   | 准确的   | inaccurate  
+| flexible   | 灵活的   | rigid  
+| sufficient | 足够的   | insufficient  
+
+#### **4. 学术词汇（Academic Words）**
+| **英文**       | **中文**   | **领域**  
+|----------------|------------|----------------|
+| analysis      | 分析       | 科研/商业  
+| policy        | 政策       | 政治/经济  
+| theory        | 理论       | 教育/科学  
+
+---
+
+### **三、高效学习方法**
+1. **词群记忆法**  
+   - 按主题分类学习（如"教育"相关词：**teach, learn, student, exam, degree**）。  
+2. **搭配优先**  
+   - 掌握固定搭配而非孤立单词：  
+     - **make a decision**（非*do a decision*)  
+     - **heavy rain**（非*strong rain*)  
+3. **例句输出**  
+   - 对每个词造3个不同场景的句子，强化应用能力。
+
+---
+
+### **四、资源推荐**
+1. **官方工具**：  
+   - [牛津学习者词典官网](https://www.oxfordlearnersdictionaries.com/)（搜索单词带★即为3000词）  
+   - *Oxford 3000™ and 5000™* APP（按等级筛选单词）  
+2. **扩展学习**：  
+   - 配套书《Oxford Word Skills》（分初级/中级/高级）  
+
+---
+
+### **五、每日学习计划**
+| **时间** | **任务**                  | **目标**  
+|----------|---------------------------|----------------|
+| 10分钟   | 学习10个新词+搭配         | 理解词义与用法  
+| 5分钟    | 用新词写3句话             | 强化输出能力  
+| 5分钟    | 复习前日单词（闪卡测试）  | 防止遗忘  
+
+**例句练习**：  
+- 用**analysis**造句：  
+  *"The data **analysis** revealed a surprising **trend**."*  
+
+掌握这3000词即可流畅应对90%的日常交流与学术场景！
