--- a/读书摘要.md
+++ b/读书摘要.md
@@ -1,3 +1,4 @@
 ## 原子习惯
 - 前置认知：忘记目标，关注习惯
-- 改变身份，四大技巧：提示-> 欲望-> 响应-> 奖励
+- 改变身份，四大技巧：提示-> 欲望-> 响应-> 奖励；
+- 1、提示（习惯显形、优化提示）；欲望（重新编译大脑、捆绑诱惑、组织影响）；响应（重复、减少摩擦、增加摩擦）；奖励（可视化、习惯追踪、保持链条、惩罚）。
