--- a/读书摘要.md
+++ b/读书摘要.md
@@ -2,3 +2,4 @@
 - 前置认知：忘记目标，关注习惯
 - 改变身份，四大技巧：提示-> 欲望-> 响应-> 奖励；
 - 1、提示（习惯显形、优化提示）；欲望（重新编译大脑、捆绑诱惑、组织影响）；响应（重复、减少摩擦、增加摩擦）；奖励（可视化、习惯追踪、保持链条、惩罚）。
+- 微习惯：把一个目标拆分的足够小就会行动，目标太大会让人完全不行动（比如一天最少一个俯卧撑，第二天两个，第三天，如果实在太累了最少做一个兜底）。
