--- a/读书摘要.md
+++ b/读书摘要.md
@@ -3,3 +3,16 @@
 - 改变身份，四大技巧：提示-> 欲望-> 响应-> 奖励；
 - 1、提示（习惯显形、优化提示）；欲望（重新编译大脑、捆绑诱惑、组织影响）；响应（重复、减少摩擦、增加摩擦）；奖励（可视化、习惯追踪、保持链条、惩罚）。
 - 微习惯：把一个目标拆分的足够小就会行动，目标太大会让人完全不行动（比如一天最少一个俯卧撑，第二天两个，第三天，如果实在太累了最少做一个兜底）。
+
+“原子习惯”实操方法，核心内容如下：
+- 前置认知：
+- 1、放弃空泛目标，聚焦习惯养成，因习惯经重复可自动运行，更易达成长效结果；
+- 2、先改变身份认知，如想要健身则将自己定义为“运动者”，借“拟剧理论”驱动行为与身份匹配。
+
+- 行为逻辑：
+- 行为遵循：提示-> 欲望-> 响应-> 奖励 的链条；可利用此机制设计习惯养成路径（如用手机提醒触发学习欲望，完成以后以休息作为奖励）；
+- 四大技巧：
+- 提示优化：用“习惯记分卡”记录行为：将习惯具象为“时间+地点+行动”，如每天早6点卧室读书15分钟；新旧习惯绑定（刷牙后做拉伸）；隐藏手机等坏提示源；
+- 激发欲望：强化行为价值（健身=健康）；用“普瑞玛原理”捆绑诱惑（读书后玩游戏）；融入积极群体（如阅读会）；
+- 降低行为摩擦：从微小重复开始（如每天读两行书）；减少心理能耗。
+- 匹配奖励：用即时反馈巩固习惯（如完成任务听音乐）；长期可设置进阶奖励（坚持一月买新装备）。
