--- a/AI/基本概念.md
+++ b/AI/基本概念.md
@@ -1,1 +1,9 @@
 以下是人工智能领域中的一些基本概念和常用名词的详细介绍，尤其是与大型语言模型（LLM）相关的术语：
+
+- 1、Agent（智能体）：
+- 定义：在AI中，Agent指能够感知环境、做出决策并执行动作的自主实体，它可以是简单的系统，也可以是复杂的基于AI的模型。
+- 特点是：自治性（无需人工干预即可运行）；目标导向（通过规划或学习完成特定任务）；交互性（与环境或其他agent互动，如API，工具调用）。
+- 例子：chatGPT作为agent：通过理解用户输入（Prompt），调用工具（如计算器，搜索引擎）来回答问题；AutoGpt自动拆解复杂任务并分步执行的AI Agent。
+
+- 2、Prompt（提示词）：
+- 定义：用户输入给AI模型的指令或问题
