--- a/AI/基本概念.md
+++ b/AI/基本概念.md
@@ -6,4 +6,10 @@
 - 例子：chatGPT作为agent：通过理解用户输入（Prompt），调用工具（如计算器，搜索引擎）来回答问题；AutoGpt自动拆解复杂任务并分步执行的AI Agent。
 
 - 2、Prompt（提示词）：
-- 定义：用户输入给AI模型的指令或问题
+- 定义：用户输入给AI模型的指令或问题，用于引导模型生成特定输出。
+- 关键点：（1）设计原则：清晰的Prompt能显著提升模型输出质量，（2），Prompt Engineering：优化Prompt的技术（思维链，要求模型分步推理）。
+
+- 3、Function Calling（函数调用）：
+- 定义：AI模型根据用户请求，自动调用外部工具或API的能力。
+- 作用：扩展模型功能（如实时天气查询，数据库操作）；解决模型固有局限（如数学信息，时效性信息）。
+- 流程：用户提问-> 模型识别需调用天气API，返回结构化请求-> 系统执行API调用并返回结果给模型 -> 模型将结果转化为自然语言回答。
