--- a/AI/基本概念.md
+++ b/AI/基本概念.md
@@ -13,3 +13,7 @@
 - 定义：AI模型根据用户请求，自动调用外部工具或API的能力。
 - 作用：扩展模型功能（如实时天气查询，数据库操作）；解决模型固有局限（如数学信息，时效性信息）。
 - 流程：用户提问-> 模型识别需调用天气API，返回结构化请求-> 系统执行API调用并返回结果给模型 -> 模型将结果转化为自然语言回答。
+- 应用场景：订机票，查询股票价格，自动化办公等。
+
+- 4、Token（词元）：
+- （1）模型处理文本的基本单位，可能是单词或子词，（2）影响模型输入长度或计算效率（例如GPT-4 Turbo支持128k tokens）。
