--- a/AI/基本概念.md
+++ b/AI/基本概念.md
@@ -1,4 +1,4 @@
-以下是人工智能领域中的一些基本概念和常用名词的详细介绍，尤其是与大型语言模型（LLM）相关的术语：
+**以下是人工智能领域中的一些基本概念和常用名词的详细介绍，尤其是与大型语言模型（LLM）相关的术语：**
 
 - 1、Agent（智能体）：
 - 定义：在AI中，Agent指能够感知环境、做出决策并执行动作的自主实体，它可以是简单的系统，也可以是复杂的基于AI的模型。
@@ -17,3 +17,26 @@
 
 - 4、Token（词元）：
 - （1）模型处理文本的基本单位，可能是单词或子词，（2）影响模型输入长度或计算效率（例如GPT-4 Turbo支持128k tokens）。
+
+- 5、Temperature（温度）：
+- 控制生成文本的随机性：低温度（如0.2）输出确定性高，适合事实性回答；高温度（如0.8）输出更具创造性，适合写故事。
+
+- 6、Fine-Tuning（微调）：
+- 在预训练模型基础上，用特定领域数据进一步训练，使其适应specialized 任务（如法律、医疗场景）；
+
+- 7、Embedding（嵌入）：
+- 将文本转换为高维向量，用于语义搜索，聚类等（如衡量 猫和狗 的向量相似度）；
+
+
+**典型工作流程示例：**
+
+- 1、用户输入Prompt：“帮我预定下周二北京到上海的机票，预算2000元以内”；
+- 2、Agent识别意图：触发航班预定的function call；
+- 3、调用机票API：查询符合条件航班；
+- 4、模型返回结果：“已找到3个选项，最便宜的是东航MU5111，价格1850元，是否需要预订？”。
+
+**总结**
+- agent是任务执行的大脑；
+- Prompt是与AI沟通的语言；
+- Function Calling：是连接AI与外部工具的“桥梁”；
+- 这些概念共同构成了现代AI系统的核心奇偶爱护框架，尤其在ChatGPT 等产品中广泛应用。
