--- a/AI/基本概念.md
+++ b/AI/基本概念.md
@@ -39,4 +39,4 @@
 - agent是任务执行的大脑；
 - Prompt是与AI沟通的语言；
 - Function Calling：是连接AI与外部工具的“桥梁”；
-- 这些概念共同构成了现代AI系统的核心奇偶爱护框架，尤其在ChatGPT 等产品中广泛应用。
+- 这些概念共同构成了现代AI系统的核心交互框架，尤其在ChatGPT 等产品中广泛应用。
