--- a/读书摘要.md
+++ b/读书摘要.md
@@ -23,3 +23,8 @@
 - 2、人的成长速度取决于复盘能力。
 
 ## 关键对话
+- 避免傻瓜式选择，我的目的是什么-对话目的；
+- 营造安全氛围-道歉、对比法、否定、肯定、共同目的；
+- 陈述观点，分享事实、试探性观点、询问对方观点；
+- 了解动机
+- 最后自己要练习以下、回顾一下。
