--- a/程序员英语学习提升方案.md
+++ b/程序员英语学习提升方案.md
@@ -21,37 +21,34 @@
 - 如果有字幕，再对照听一遍
 - 模仿发音，跟读重要句子
 
-工具和资源推荐
-阅读材料优先级
+**工具和资源推荐**
 
-GitHub项目的README文档
-官方技术文档（React、Node.js等）
-Dev.to、Medium技术文章
-Hacker News讨论
+阅读材料优先级
+- GitHub项目的README文档
+- 官方技术文档（React、Node.js等）
+- Dev.to、Medium技术文章
+- Hacker News讨论
 
 听力材料优先级
+- 技术会议演讲（10-15分钟片段）
+- 编程教学视频
+- 技术播客节选
 
-技术会议演讲（10-15分钟片段）
-编程教学视频
-技术播客节选
+**具体执行建议**
 
-具体执行建议
 建立词汇积累系统
-
-使用Anki或Quizlet制作技术词汇卡片
-每周复习一次积累的词汇
-重点记忆高频技术动词和形容词
+- 使用Anki或Quizlet制作技术词汇卡片
+- 每周复习一次积累的词汇
+- 重点记忆高频技术动词和形容词
 
 进度追踪
-
-每周选定一个技术主题（如React hooks、API设计）
-围绕这个主题寻找相关的英语材料
-周末花5分钟回顾本周学到的新表达
+- 每周选定一个技术主题（如React hooks、API设计）
+- 围绕这个主题寻找相关的英语材料
+- 周末花5分钟回顾本周学到的新表达
 
 效果最大化技巧
-
-选择略高于当前水平的材料（能理解70%左右）
-优先选择有实际工作相关性的内容
-将学到的表达尝试在工作邮件或文档中使用
+- 选择略高于当前水平的材料（能理解70%左右）
+- 优先选择有实际工作相关性的内容
+- 将学到的表达尝试在工作邮件或文档中使用
 
 这个方案的优势是将英语学习与专业发展结合，既提升了语言能力，又增进了技术知识。坚持2-3个月就能看到明显进步。
