--- a/英语学习针对性的材料清单.md
+++ b/英语学习针对性的材料清单.md
@@ -49,32 +49,29 @@
 
 
 第5周开始：技术深度内容
+- 播客：JS Party, Full Stack Radio
+- 会议演讲：React Conf, Node.js Interactive (10-15分钟片段)
 
-播客：JS Party, Full Stack Radio
-会议演讲：React Conf, Node.js Interactive (10-15分钟片段)
+**具体网站和资源链接**
 
-具体网站和资源链接
 阅读优先级网站（按难度排序）
+- MDN Web Docs - mozilla.org/en-US/docs/Web
+- JavaScript.info - javascript.info
+- React官方文档 - react.dev
+- Next.js文档 - nextjs.org/docs
+- Node.js Guide - nodejs.org/en/docs/guides
+- dev.to前端标签 - dev.to/t/frontend, dev.to/t/fullstack
 
-MDN Web Docs - mozilla.org/en-US/docs/Web
-JavaScript.info - javascript.info
-React官方文档 - react.dev
-Next.js文档 - nextjs.org/docs
-Node.js Guide - nodejs.org/en/docs/guides
-dev.to前端标签 - dev.to/t/frontend, dev.to/t/fullstack
+**YouTube频道学习路径**
 
-YouTube频道学习路径
 入门级（第1-2周）：
-
-Programming with Mosh (慢速清晰)
-The Net Ninja (英式口音，发音标准)
+- Programming with Mosh (慢速清晰)
+- The Net Ninja (英式口音，发音标准)
 
 进阶级（第3-4周）：
-
-Traversy Media (实用项目导向)
-Web Dev Simplified (概念解释清楚)
+- Traversy Media (实用项目导向)
+- Web Dev Simplified (概念解释清楚)
 
 深入级（第5周+）：
-
-Fireship (快节奏，信息密度高)
-JavaScript Mastery (全栈项目)
+- Fireship (快节奏，信息密度高)
+- JavaScript Mastery (全栈项目)
