--- a/英语学习针对性的材料清单.md
+++ b/英语学习针对性的材料清单.md
@@ -75,3 +75,27 @@
 深入级（第5周+）：
 - Fireship (快节奏，信息密度高)
 - JavaScript Mastery (全栈项目)
+
+---
+
+**第一个月详细执行计划**
+
+Week 1: HTML/CSS/JS基础
+- 阅读：MDN基础概念文档
+- 听力：Traversy Media基础教程
+- 实践：每天记录5个新的前端术语
+
+Week 2: React入门
+- 阅读：React官方文档Quick Start
+- 听力：React入门视频教程
+- 实践：学会用英语解释"component"和"props"
+
+Week 3: 后端基础
+- 阅读：Node.js和Express基础文档
+- 听力：Node.js入门教程
+- 实践：理解"server", "route", "middleware"等概念
+
+Week 4: 全栈整合
+- 阅读：全栈项目教程文章
+- 听力：全栈开发播客片段
+- 实践：能够描述前后端数据流程
