--- a/思维1.md
+++ b/思维1.md
@@ -1,1 +1,13 @@
 **大量且频繁的记录：记录为了觉察、觉察为了提升**
+
+意识显性化：
+- 将潜意识转化为可观察对象
+- 识别重复模式与隐藏因果链
+
+能力管理：
+- 减少微小决策消耗
+- 阻断情绪反刍链条
+
+认知迭代
+- 建立 “行为 - 结果” 关联模型
+- 培养结构化思维习惯
