--- a/思维1.md
+++ b/思维1.md
@@ -11,3 +11,10 @@
 认知迭代
 - 建立 “行为 - 结果” 关联模型
 - 培养结构化思维习惯
+
+---
+
+记录不是零散流水账，而是有逻辑的结构化梳理：
+- 记录事实：抛开主观判断、只写客观细节
+- 记录结果：分析事实带来的直接影响
+- 记录情绪：诚实写下当下感受，
