--- a/思维1.md
+++ b/思维1.md
@@ -18,3 +18,8 @@
 - 记录事实：抛开主观判断、只写客观细节
 - 记录结果：分析事实带来的直接影响
 - 记录情绪：诚实写下当下感受，
+
+---
+他人即地狱：这句话的本质是指代他人的凝视，会将你客体化从而让你丧失自我的主体性。 也就是说别人对你的评判会让你丧失自我，或者激烈对抗的痛苦之中；当你在分辨别人是善意还是恶意的时候，你的自主意志就被崩塌，变成了别人意志的客体，人们生活中的烦恼，莫不如此。很多时候别人对你的评判带有善意，你就会迎合他；别人对你带有恶意、对你有负面的评判，你就会对抗他；你的情绪和行为完全建立在别人身上，变成了别人意志的客体；你的地狱就由此而生了；
+
+总结：他人即地狱）→（放弃关系，以自我为中心）→（自私自利）→（无爱破情局，无情破全局）
