--- a/思维1.md
+++ b/思维1.md
@@ -20,6 +20,8 @@
 - 记录情绪：诚实写下当下感受，
 
 ---
+他人即地狱：你期待谁给出情绪上的回应，谁就会成为束缚你的枷锁；你花心思试图窥探谁的想法，你就会不得不介入他人的因果；你把谁的评价放在心上，你就会沦为他的奴隶；他说的那些话你都会受到影响；你太在乎别人，就会陷入被审视被物化的状态，变得焦虑又不自信；你越是看重什么，什么就会让你备受煎熬；你越是拿什么去比较，什么就会把你捆住；所以记住这个世界的规则：所有的关系你不要了，这道题就解开了；这世界上最牢固的关系就是没有关系，或者不执着所有的关系，无爱可破情局，无情可破全局。
+
 他人即地狱：这句话的本质是指代他人的凝视，会将你客体化从而让你丧失自我的主体性。 也就是说别人对你的评判会让你丧失自我，或者激烈对抗的痛苦之中；当你在分辨别人是善意还是恶意的时候，你的自主意志就被崩塌，变成了别人意志的客体，人们生活中的烦恼，莫不如此。很多时候别人对你的评判带有善意，你就会迎合他；别人对你带有恶意、对你有负面的评判，你就会对抗他；你的情绪和行为完全建立在别人身上，变成了别人意志的客体；你的地狱就由此而生了；
 
 总结：他人即地狱）→（放弃关系，以自我为中心）→（自私自利）→（无爱破情局，无情破全局）
