--- a/详细解读知乎好文(1).md
+++ b/详细解读知乎好文(1).md
@@ -1,3 +1,3 @@
-**底层出身的人，就是训练数据集质量差且噪声大，严重欠拟合，自我剪枝，强化学习的权重侧重于短期收益，在很多领域上表现不行，幻觉很严重，但是稳定性较好。 
-中产者，训练数据不少但是都是经过筛选的，带有强归纳偏置，特定领域下表现能到SOTA，基本上都是快速收敛到一个局部最优解，很稳定，但是缺乏创造力和多样性。由于强归纳偏置导致对特定的OOD攻击几乎没有防御力。 
-有钱人，训练数据巨大且分布广泛，模型泛化能力很强，对OOD攻击防御较高，弱偏置，创新强，可以实现通用AGI。我们作为普通人，想要逆天改命，应该做的就是主动去获取OOD数据，主动调整自己的损失函数，严防过拟合。**
+- 底层出身的人，就是训练数据集质量差且噪声大，严重欠拟合，自我剪枝，强化学习的权重侧重于短期收益，在很多领域上表现不行，幻觉很严重，但是稳定性较好。
+- 中产者，训练数据不少但是都是经过筛选的，带有强归纳偏置，特定领域下表现能到SOTA，基本上都是快速收敛到一个局部最优解，很稳定，但是缺乏创造力和多样性。由于强归纳偏置导致对特定的OOD攻击几乎没有防御力。
+- 有钱人，训练数据巨大且分布广泛，模型泛化能力很强，对OOD攻击防御较高，弱偏置，创新强，可以实现通用AGI。我们作为普通人，想要逆天改命，应该做的就是主动去获取OOD数据，主动调整自己的损失函数，严防过拟合。
