--- a/文字与短视频对比.md
+++ b/文字与短视频对比.md
@@ -108,3 +108,19 @@
 - 需要严谨边界的内容：编程、数学、法律条文解读、论文、投资逻辑、系统设计
 - 需要长期积累的能力：写作、推理、知识体系搭建
 - 需要可复盘：做笔记、整理框架、输出文章/回答
+
+**通用分工原则（决定用短视频还是文字）**
+
+什么时候短视频更划算
+- 需要“看动作/看手法/看音色”：健身动作、口语发音、做菜火候、产品上手、实验操作。
+- 需要快速建立“地图感”：一个领域有哪些分支、关键术语是什么、常见误区有哪些。
+- 需要情绪与动机：激励、氛围、把你带入状态（但要短时限）。
+
+什么时候必须用文字
+- 有严格边界与条件：定义、公式、证明、规则、协议、合约、会计口径。
+- 要形成可复用能力：写代码、写文章、做计划、做策略。
+- 要复盘与检索：你未来要回来查同一件事（尤其技术/理财）。
+
+组合的核心：短视频当“入口”，文字当“沉淀与验证”
+- 短视频负责：看得懂、想去做
+- 文字负责：做得对、做得久、能复用
